--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
           node-version: 16.x
           registry-url: https://registry.npmjs.org
 
-      - run: npm ci
-      - run: npm run build:ts
-      - run: npm run lint:ci
+      - run: yarn install --frozen-lockfile
+      - run: yarn build:ts
+      - run: yarn lint:ci
 
       - name: Restore emscripten build cache
         uses: actions/cache@v2.1.4
@@ -34,8 +34,8 @@ jobs:
           restore-keys: |
             1-emscripten-
 
-      - run: npm run build:wasm
-      - run: npm run test
+      - run: yarn build:wasm
+      - run: yarn test
 
       - name: Publish to NPM
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
