--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "main": "dist/index.js",
   "files": [
     "dist",
-    "src",
+    "src/index.ts",
     "wasm"
   ],
   "scripts": {
-    "build:ts": "tsc -b",
+    "bench": "ts-node src/index.bench.ts",
+    "build:ts": "tsc --project tsconfig.build.json",
     "build:wasm": "./build.sh",
     "prepack": "npm run build:ts && npm run build:wasm",
     "clean": "tsc -b --clean",
@@ -30,11 +31,13 @@
   "devDependencies": {
     "@foxglove/eslint-plugin": "0.19.0",
     "@foxglove/tsconfig": "1.1.0",
-    "@types/emscripten": "1.39.6",
-    "@types/jest": "28.1.1",
+    "@types/emscripten": "^1.39.6",
+    "@types/jest": "^28.1.1",
+    "@types/three": "^0.141.0",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
     "babel-plugin-transform-import-meta": "2.1.1",
+    "benny": "^3.7.1",
     "esbuild": "0.14.43",
     "esbuild-jest": "0.5.0",
     "eslint": "8.17.0",
@@ -47,6 +50,8 @@
     "jest": "28.1.1",
     "jest-ts-webcompat-resolver": "1.0.0",
     "prettier": "2.6.2",
+    "three": "0.141.0",
+    "ts-node": "^10.8.1",
     "typescript": "4.7.3"
   }
 }
